Fix scrollbar taking up space

--- a/styling.scss
+++ b/styling.scss
@@ -4,6 +4,7 @@ $c-text: #000000;
 
 html {
   font-size: 10px;
+  width: 100vw;
 }
 
 html,
@@ -25,6 +26,7 @@ html {
 img {
   width: 100%;
   height: auto;
+  display: block;
 }
 
 .mobile {
